--- a/applications/common/frontend/src/components/Container/Container.scss
+++ b/applications/common/frontend/src/components/Container/Container.scss
@@ -21,12 +21,12 @@
 @use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
 
 .container {
-  padding-left: map.get(spacing.$spacing-values, '2');
-  padding-right: map.get(spacing.$spacing-values, '2');
+  padding-left: var(--spacing-2);
+  padding-right: var(--spacing-2);
 
   @include breakpoint.media-breakpoint-large {
-    padding-left: map.get(spacing.$spacing-values, '0');
-    padding-right: map.get(spacing.$spacing-values, '0');
+    padding-left: var(--spacing-0);
+    padding-right: var(--spacing-0);
   }
 }
 
