WOS-388 move scripts to head with defer attribute

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/page/head-libs.html
@@ -61,3 +61,16 @@
   data-sly-test="${!(wcmmode.isEdit || wcmmode.isPreview) && !project.version}"
   href="/libs/kyanite/webroot/main.published.css"
 />
+
+<sly data-sly-use.model="pl.ds.kyanite.common.components.helpers.PageModel"></sly>
+<!-- Google Tag Manager (noscript) -->
+<noscript data-sly-test="${model.hasAnalyticsUrl}"><iframe src="${model.googleAnalyticsUrl}"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+
+<script defer data-sly-test="${wcmmode.isDisabled && project.version}" src="/libs/kyanite/webroot/${project.version}/main.js"></script>
+<script defer data-sly-test="${wcmmode.isDisabled && !project.version}" src="/libs/kyanite/webroot/main.js"></script>
+<script defer data-sly-test="${!wcmmode.isDisabled}" src="/libs/kyanite/webroot/main.js"></script>
+
+<script defer data-sly-test="${wcmmode.isDisabled && project.version}" src="/libs/kyanite/webroot/${project.version}/main.published.js"></script>
+<script defer data-sly-test="${wcmmode.isDisabled && !project.version}" src="/libs/kyanite/webroot/main.published.js"></script>
